fixed recipe create ingredient spacing, removed empty instructions title

--- a/resources/scss/recipes/create.scss
+++ b/resources/scss/recipes/create.scss
@@ -45,7 +45,6 @@
     }
     
     .list-group-item {
-        height: 26px !important;
         font-size: 1rem;
         display: flex;
         align-items: center;
@@ -58,7 +57,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 21.5px;
             width: 21.5px;
             cursor: pointer;
             margin: 0 10px;
